--- a/Alicargo/Views/Application/Details.cshtml
+++ b/Alicargo/Views/Application/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Resources
-@model ApplicationEditModel
+@model ApplicationDetailsModel
 
-<h4>@Entities.LegalEntity: @Html.DisplayFor(x => x.LegalEntity)</h4>
+<h4>@Entities.LegalEntity: @Html.DisplayFor(x => x.ClientLegalEntity)</h4>
 
 <div class="entity-edit entity-details">
 	@Html.DisplayForModel()
