--- a/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/ForwarderColumns.cshtml
@@ -3,7 +3,7 @@
 
 var columns = [
 { field: "State", title: '@Entities.StateName', groupable: true, editor: stateDropDownEditor, template: "#= State.StateName #", width: "150px" },
-{ field: "LegalEntity", title: '@Entities.LegalEntity', groupable: true, width: "150px" },
+{ field: "ClientLegalEntity", title: '@Entities.LegalEntity', groupable: true, width: "150px" },
 { field: "DisplayNumber", title: '@Entities.DisplayNumber', width: "70px", groupable: false },
 { field: "Count", title: '@Entities.Count', groupable: false, width: "35px", groupFooterTemplate: "#= Count.sum #" },
 { field: "Weigth", title: '@Entities.Weigth', groupable: false, width: "35px", groupFooterTemplate: "#= Weigth.sum #" },
@@ -15,4 +15,4 @@ var columns = [
 { field: "TransitPhone", title: '@Entities.Phone', groupable: false, width: "100px" },
 { field: "TransitWarehouseWorkingTime", title: '@Entities.WarehouseWorkingTime', groupable: false, width: "90px" },
 { field: "TransitReference", title: '@Entities.TransitReference', groupable: false, width: "150px" },
-{ field: "AirWaybillBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
+{ field: "AirWaybill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
