--- a/Alicargo/Views/ApplicationList/SenderColumns.cshtml
+++ b/Alicargo/Views/ApplicationList/SenderColumns.cshtml
@@ -12,4 +12,4 @@ var columns = [
 { field: "ValueString", title: '@Entities.Value', groupable: false, width: "70px" },
 { field: "State", title: '@Entities.StateName', groupable: true, editor: stateDropDownEditor, template: "#= State.StateName #" },
 { field: "StateChangeTimestampLocalString", title: '@Entities.StateChangeTimestamp', groupable: false },
-{ field: "AirWaybillBill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
+{ field: "AirWaybill", title: '@Entities.AirWayBill', groupable: true, width: "150px", groupHeaderTemplate: "@Entities.AWB: #= !!value ? value : '@Pages.NoAirWaybill' #" }];
