removed client data from ApplicationEditModel

--- a/Alicargo/Views/Application/Create.cshtml
+++ b/Alicargo/Views/Application/Create.cshtml
@@ -2,5 +2,5 @@
 @using Resources
 @model ApplicationEditModel
 
-<h4 style="margin-top: 33px;" class="pull-right">@Entities.Nic: @Html.DisplayFor(x => x.ClientNic)</h4>
+<h4 style="margin-top: 33px;" class="pull-right">@Entities.Nic: @Html.ViewBag.ClientNic</h4>
 @Html.EditPage(Pages.ApplicationAdd, Url.Action(MVC.Application.Create()), Pages.ApplicationAdd)
