--- a/Alicargo/Views/Application/EditorTemplates/ApplicationEditModel.cshtml
+++ b/Alicargo/Views/Application/EditorTemplates/ApplicationEditModel.cshtml
@@ -2,7 +2,7 @@
 @using Alicargo.Core.Localization
 @inherits BaseWebViewPage<ApplicationEditModel>
 
-@if (Model.Id != 0)
+@if (Model != null)
 {
 	@Html.HiddenFor(x => x.StateId)
 	@Html.HiddenFor(x => x.TransitId)
@@ -87,29 +87,29 @@
 <div class="row">
 	<div class="span4">
 		@Html.LabelFor(model => model.Torg12File)
-		@Helpers.FileUploader(Html.IdFor(x => x.Torg12File).ToHtmlString(), Model.Torg12FileName)
+		@Helpers.FileUploader(Html.IdFor(x => x.Torg12File).ToHtmlString(), Model == null ? null : Model.Torg12FileName)
 	</div>
 	<div class="span4">
 		@Html.LabelFor(model => model.CPFile)
-		@Helpers.FileUploader(Html.IdFor(x => x.CPFile).ToHtmlString(), Model.CPFileName)
+		@Helpers.FileUploader(Html.IdFor(x => x.CPFile).ToHtmlString(),  Model == null ? null : Model.CPFileName)
 	</div>
 	<div class="span4">
 		@Html.LabelFor(model => model.DeliveryBillFile)
-		@Helpers.FileUploader(Html.IdFor(x => x.DeliveryBillFile).ToHtmlString(), Model.DeliveryBillFileName)
+		@Helpers.FileUploader(Html.IdFor(x => x.DeliveryBillFile).ToHtmlString(), Model == null ? null :  Model.DeliveryBillFileName)
 	</div>
 </div>
 <div class="row">
 	<div class="span4">
 		@Html.LabelFor(model => model.InvoiceFile)
-		@Helpers.FileUploader(Html.IdFor(x => x.InvoiceFile).ToHtmlString(), Model.InvoiceFileName)
+		@Helpers.FileUploader(Html.IdFor(x => x.InvoiceFile).ToHtmlString(), Model == null ? null :  Model.InvoiceFileName)
 	</div>
 	<div class="span4">
 		@Html.LabelFor(model => model.SwiftFile)
-		@Helpers.FileUploader(Html.IdFor(x => x.SwiftFile).ToHtmlString(), Model.SwiftFileName)
+		@Helpers.FileUploader(Html.IdFor(x => x.SwiftFile).ToHtmlString(),  Model == null ? null : Model.SwiftFileName)
 	</div>
 	<div class="span4">
 		@Html.LabelFor(model => model.PackingFile)
-		@Helpers.FileUploader(Html.IdFor(x => x.PackingFile).ToHtmlString(), Model.PackingFileName)
+		@Helpers.FileUploader(Html.IdFor(x => x.PackingFile).ToHtmlString(),  Model == null ? null : Model.PackingFileName)
 	</div>
 </div>
 <div>
