--- a/Alicargo/Views/Carrier/Select.cshtml
+++ b/Alicargo/Views/Carrier/Select.cshtml
@@ -1,10 +1,22 @@
-﻿@model CarrierSelectModel
+﻿@using System.Globalization
+@model CarrierSelectModel
+
+@helper Select()
+{
+	var countries = (IDictionary<long, string>)ViewBag.Carriers;
+	var list = countries.Select(x => new SelectListItem
+	{
+		Text = x.Value,
+		Value = x.Key.ToString(CultureInfo.InvariantCulture)
+	}).ToList();
+	@Html.DropDownListFor(x => x.CarrierId, list)
+}
 
 <div id="carrier-tabs">
 	<ul>
 		<li>
 			<a href="#select-carrier">
-				@Html.LabelFor(model => model.CarrierName)
+				@Html.LabelFor(model => model.CarrierId)
 			</a>
 		</li>
 		<li>
@@ -14,11 +26,7 @@
 		</li>
 	</ul>
 	<div id="select-carrier">
-		@Html.DropDownListFor(x => x.CarrierName, Model.Carriers.Select(x => new SelectListItem
-				{
-					Text = x.Value,
-					Value = x.Key
-				}))
+		@Select()
 	</div>
 	<div id="new-carrier">
 		@Html.EditorFor(x => x.NewCarrierName)
@@ -26,16 +34,16 @@
 	<script>
 		$(function () {
 			var newCarrier = $("#@Html.IdFor(x => x.NewCarrierName)");
-					$("#carrier-tabs").tabs({
-						activate: function (event, ui) {
-							newCarrier.val('');
-							if (ui.newPanel.is("#new-carrier")) {
-								newCarrier.attr("required", "required");
-							} else {
-								newCarrier.removeAttr("required");
-							}
-						}
-					});
-				});
+			$("#carrier-tabs").tabs({
+				activate: function (event, ui) {
+					newCarrier.val('');
+					if (ui.newPanel.is("#new-carrier")) {
+						newCarrier.attr("required", "required");
+					} else {
+						newCarrier.removeAttr("required");
+					}
+				}
+			});
+		});
 	</script>
 </div>
