--- a/Alicargo/Views/Shared/EditorTemplates/Client.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/Client.cshtml
@@ -2,6 +2,7 @@
 
 @if (Model != null)
 {
+	// todo: remove this shit
 	@Html.HiddenFor(m => m.Id)
 	@Html.HiddenFor(m => m.TransitId)
 	@Html.HiddenFor(m => m.Transit.Id)
