--- a/Alicargo/Views/Shared/EditorTemplates/TransitEditModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/TransitEditModel.cshtml
@@ -1,11 +1,6 @@
 ﻿@using System.Web.Mvc.Html
 @using Alicargo.Core.Localization
-@model Transit
-
-@if (Model != null)
-{
-	@Html.HiddenFor(x => x.CarrierId)
-}
+@model TransitEditModel
 
 <div class="row">
 	<div class="span8">
@@ -16,7 +11,7 @@
 		@Html.EditorWithLabelFor(model => model.WarehouseWorkingTime)
 	</div>
 	<div class="span4">
-		@Html.Action(MVC.Carrier.Select(Model != null ? Model.CarrierId : (long?)null))
+		@Html.Action(MVC.Carrier.Select((long?)ViewBag.TransitId))
 		@Html.LabelFor(model => model.MethodOfTransit)
 		@Html.DropDownListFor(model => model.MethodOfTransit, LocalizeEnumExtension.Select<MethodOfTransit, SelectListItem>((item, name) => new SelectListItem
 		{
