--- a/Alicargo/Views/Carrier/Select.cshtml
+++ b/Alicargo/Views/Carrier/Select.cshtml
@@ -3,8 +3,8 @@
 
 @helper Select()
 {
-	var countries = (IDictionary<long, string>)ViewBag.Carriers;
-	var list = countries.Select(x => new SelectListItem
+	var all = (IDictionary<long, string>)ViewBag.Carriers;
+	var list = all.Select(x => new SelectListItem
 	{
 		Text = x.Value,
 		Value = x.Key.ToString(CultureInfo.InvariantCulture)
