--- a/Alicargo/Views/Client/Create.cshtml
+++ b/Alicargo/Views/Client/Create.cshtml
@@ -1,3 +1,3 @@
-﻿@model Client
+﻿@model ClientModel
 
 @Html.EditPage(Resources.Pages.ClientAdd, Url.Action(MVC.Client.Create()), Resources.Pages.Add)
