--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -1,5 +1,4 @@
-﻿@using Alicargo.Core.Enums
-@using Alicargo.Core.Localization
+﻿@using Alicargo.Core.Localization
 @inherits BaseWebViewPage
 
 @helper ClientMenu()
