--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 		<div class="container">
 			<p class="muted credit">
 				&copy; Alicargo
-                @Html.ActionLink(@Resources.Pages.SignIn, MVC.User.Login())
+                @Html.ActionLink(@Resources.Pages.SignIn, MVC.Authentication.Login())
 			</p>
 		</div>
 	</footer>
