--- a/Alicargo/Views/AirWaybill/EditorTemplates/AirWaybillModel.cshtml
+++ b/Alicargo/Views/AirWaybill/EditorTemplates/AirWaybillModel.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Resources
-@inherits BaseWebViewPage<AirWaybillModel>
+@inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AirWaybillEditModel>
 
 @helper SelectBrocker()
 {
