--- a/Alicargo/Views/Brocker/AWB.cshtml
+++ b/Alicargo/Views/Brocker/AWB.cshtml
@@ -4,4 +4,4 @@
 	@Resources.Entities.AWB:
 	@ViewBag.AWB
 </h3>
-@Html.EditPage("", Url.Action(MVC.Brocker.AWB()), Resources.Pages.Save, @Html.Action(MVC.AirWaybill.CargoIsCustomsClearedButton(Model.Id)))
+@Html.EditPage("", Url.Action(MVC.Brocker.AWB()), Resources.Pages.Save, @Html.Action(MVC.AirWaybill.CargoIsCustomsClearedButton((long)ViewBag.AwbId)))
