--- a/Alicargo/Views/AirWaybill/EditorTemplates/AirWaybillModel.cshtml
+++ b/Alicargo/Views/AirWaybill/EditorTemplates/AirWaybillModel.cshtml
@@ -1,4 +1,5 @@
-﻿@using Resources
+﻿@using Alicargo.Contracts.Enums
+@using Resources
 @inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AirWaybillEditModel>
 
 @helper SelectBrocker()
