--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Alicargo.App_Start
+@using Alicargo.Contracts.Enums
 @using Alicargo.Core.Localization
 @using Scripts = System.Web.Optimization.Scripts
 @{
