--- a/Alicargo/Views/User/Index.cshtml
+++ b/Alicargo/Views/User/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@using Alicargo.Core.Enums
+﻿@using Alicargo.Contracts.Enums
+@using Alicargo.Core.Enums
 @using Resources
-@model RoleType
+@model Alicargo.Contracts.Enums.RoleType
 
 <h3>
 	@switch (Model)
