--- a/Alicargo/Views/ApplicationList/Tools.cshtml
+++ b/Alicargo/Views/ApplicationList/Tools.cshtml
@@ -1,4 +1,5 @@
 ﻿@inherits BaseWebViewPage<ApplicationIndexModel>
+@using Alicargo.Contracts.Enums
 @using Resources
 
 @if (IdentityService.IsInRole(RoleType.Admin) || IdentityService.IsInRole(RoleType.Sender))
