--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -1,4 +1,5 @@
-﻿@using Alicargo.Core.Localization
+﻿@using Alicargo.Contracts.Enums
+@using Alicargo.Core.Localization
 @inherits BaseWebViewPage
 
 @helper ClientMenu()
