added ApplicationListItemMapper, PathConstants

--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@using Alicargo.App_Start
-@using Alicargo.Contracts.Enums
-@using Alicargo.Core.Localization
+﻿@using Alicargo.Contracts.Enums
 @using Scripts = System.Web.Optimization.Scripts
 @{
 	Layout = null;
@@ -12,15 +10,15 @@
 	<title>Alicargo</title>
 	<link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	@Styles.Render(BootstrapBundleConfig.StylesPath)
-	@Scripts.Render(BootstrapBundleConfig.ScriptsPath)
+	@Styles.Render(PathConstants.StylesPath)
+	@Scripts.Render(PathConstants.ScriptsPath)
 	@switch (UICulture)
  {
 	 case TwoLetterISOLanguageName.Russian:
-		@Scripts.Render(BootstrapBundleConfig.ScriptsPathRu)
+		@Scripts.Render(PathConstants.ScriptsPathRu)
 		 break;
 	 case TwoLetterISOLanguageName.Italian:
-		@Scripts.Render(BootstrapBundleConfig.ScriptsPathIt)
+		@Scripts.Render(PathConstants.ScriptsPathIt)
 		 break;
  }
 </head>
