--- a/Alicargo/Views/Brocker/AWB.cshtml
+++ b/Alicargo/Views/Brocker/AWB.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.Helpers
-@model BrockerAWBModel
+@model Alicargo.ViewModels.AirWaybill.BrockerAwbModel
 <h3>
 	@Resources.Entities.AWB:
 	@ViewBag.AWB
