--- a/Alicargo/Views/Shared/EditorTemplates/SelectModel.cshtml
+++ b/Alicargo/Views/Shared/EditorTemplates/SelectModel.cshtml
@@ -4,5 +4,6 @@
 @Html.DropDownList(Model.Name, Model.List.Select(x => new SelectListItem
 {
 	Text = x.Value,
-	Value = x.Key.ToString(CultureInfo.InvariantCulture)
+	Value = x.Key.ToString(CultureInfo.InvariantCulture),
+	Selected = x.Key == Model.Id
 }))
