--- a/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
+++ b/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
@@ -10,6 +10,10 @@
 
 @helper Files()
 {
+	<hr />
+	<h4>
+		@Pages.Files
+	</h4>
 	<div class="row">
 		<div class="span4">
 			@Html.LabelFor(x => x.PackingFile)
@@ -30,6 +34,7 @@
 			@Html.EditorWithLabelFor(model => model.Bill)
 			@Html.LabelFor(x => x.BrockerId)
 			@SelectBrocker()
+			@Html.EditorWithLabelFor(model => model.FlightСost)
 		</div>
 		<div class="span4">
 			@Html.EditorWithLabelFor(model => model.DepartureAirport)
@@ -54,8 +59,4 @@
 }
 
 @Parameters()
-<hr />
-<h4>
-	@Pages.Files
-</h4>
 @Files()
