--- a/Alicargo/Views/Brocker/EditorTemplates/BrockerAWBModel.cshtml
+++ b/Alicargo/Views/Brocker/EditorTemplates/BrockerAWBModel.cshtml
@@ -1,24 +1,44 @@
-﻿@model Alicargo.ViewModels.AirWaybill.BrockerAwbModel
+﻿@using Resources
+@model Alicargo.ViewModels.AirWaybill.BrockerAwbModel
 
 <div class="row">
 	<div class="span4">
-		@Html.LabelFor(model => model.GTD)
-		@Html.EditorFor(model => model.GTD)
+		@Html.EditorWithLabelFor(model => model.GTD)
 	</div>
-	<div class="span2">
+	<div class="span4">
+		@Html.EditorWithLabelFor(model => model.BrokerСost)
+	</div>
+	<div class="span4">
+		@Html.EditorWithLabelFor(model => model.CustomСost)
+	</div>
+</div>
+<hr />
+<h4>
+	@Pages.Files
+</h4>
+<div class="row">
+	<div class="span3">
 		@Html.LabelFor(model => model.GTDFile)
-		@Helpers.FileUploader(@Html.IdFor(x => x.GTDFile).ToHtmlString(), Model != null ? Model.GTDFileName : null)
+		@Helpers.FileUploader(@Html.IdFor(x => x.GTDFile).ToHtmlString(), Model != null
+			? Model.GTDFileName
+			: null)
 	</div>
-	<div class="span2">
+	<div class="span3">
 		@Html.LabelFor(model => model.GTDAdditionalFile)
-		@Helpers.FileUploader(@Html.IdFor(x => x.GTDAdditionalFile).ToHtmlString(), Model != null ? Model.GTDAdditionalFileName : null)
+		@Helpers.FileUploader(@Html.IdFor(x => x.GTDAdditionalFile).ToHtmlString(), Model != null
+			? Model.GTDAdditionalFileName
+			: null)
 	</div>
-	<div class="span2">
+	<div class="span3">
 		@Html.LabelFor(x => x.InvoiceFile)
-		@Helpers.FileUploader(@Html.IdFor(x => x.InvoiceFile).ToHtmlString(), Model != null ? Model.InvoiceFileName : null)
+		@Helpers.FileUploader(@Html.IdFor(x => x.InvoiceFile).ToHtmlString(), Model != null
+			? Model.InvoiceFileName
+			: null)
 	</div>
-	<div class="span2">
+	<div class="span3">
 		@Html.LabelFor(x => x.PackingFile)
-		@Helpers.FileUploader(@Html.IdFor(x => x.PackingFile).ToHtmlString(), Model != null ? Model.PackingFileName : null)
+		@Helpers.FileUploader(@Html.IdFor(x => x.PackingFile).ToHtmlString(), Model != null
+			? Model.PackingFileName
+			: null)
 	</div>
 </div>
