dynamic script controller

--- a/Alicargo/Views/Shared/_Layout.cshtml
+++ b/Alicargo/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using Alicargo.Contracts.Enums
+@using Alicargo.Contracts.Enums
 @using Resources
 @{
 	Layout = null;
@@ -10,7 +10,7 @@
 		<title>Alicargo</title>
 		<link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		@Styles.Render(PathConstants.StylesPath)
+		@Styles.Render(PathConstants.StylesPath)		
 		@Scripts.Render(PathConstants.ScriptsPath)
 		@switch (UICulture)
 		{
