showing cost fileds

--- a/Alicargo/Views/AirWaybill/EditorTemplates/AirWaybillEditModel.cshtml
+++ b/Alicargo/Views/AirWaybill/EditorTemplates/AirWaybillEditModel.cshtml
@@ -98,15 +98,15 @@
 	</div>
 	<div class="row">
 		<div class="span4">
-			@Html.EditorWithLabelFor(model => model.FlightСost)
-			@Html.EditorWithLabelFor(model => model.CustomСost)
+			@Html.EditorWithLabelFor(model => model.FlightCost)
+			@Html.EditorWithLabelFor(model => model.ForwarderCost)
 		</div>
 		<div class="span4">
-			@Html.EditorWithLabelFor(model => model.BrokerСost)
-			@Html.EditorWithLabelFor(model => model.ForwarderСost)
+			@Html.EditorWithLabelFor(model => model.BrokerCost)
+			@Html.EditorWithLabelFor(model => model.CustomCost)
 		</div>
 		<div class="span4">
-			@Html.EditorWithLabelFor(model => model.AdditionalСost)
+			@Html.EditorWithLabelFor(model => model.AdditionalCost)
 		</div>
 	</div>
 }
