--- a/Alicargo/Views/Brocker/EditorTemplates/BrockerAWBModel.cshtml
+++ b/Alicargo/Views/Brocker/EditorTemplates/BrockerAWBModel.cshtml
@@ -6,10 +6,10 @@
 		@Html.EditorWithLabelFor(model => model.GTD)
 	</div>
 	<div class="span4">
-		@Html.EditorWithLabelFor(model => model.BrokerСost)
+		@Html.EditorWithLabelFor(model => model.BrokerCost)
 	</div>
 	<div class="span4">
-		@Html.EditorWithLabelFor(model => model.CustomСost)
+		@Html.EditorWithLabelFor(model => model.CustomCost)
 	</div>
 </div>
 <hr />
