--- a/Alicargo/Views/DynamicScript/Localization.cshtml
+++ b/Alicargo/Views/DynamicScript/Localization.cshtml
@@ -19,6 +19,11 @@ $l.Entities_TotalCount = '@Entities.TotalCount';
 $l.Entities_TotalWeight = '@Entities.TotalWeight';
 $l.Entities_StateChangeTimestamp = '@Entities.StateChangeTimestamp';
 $l.Entities_GTD = '@Entities.GTD';
+$l.Entities_FlightCost = '@Entities.FlightCost';
+$l.Entities_CustomCost = '@Entities.CustomCost';
+$l.Entities_BrokerCost = '@Entities.BrokerCost';
+$l.Entities_ForwarderCost = '@Entities.ForwarderCost';
+$l.Entities_AdditionalCost = '@Entities.AdditionalCost';
 
 return $l;
 }($a.Localization || {}));
