--- a/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
+++ b/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
@@ -34,7 +34,7 @@
 			@Html.EditorWithLabelFor(model => model.Bill)
 			@Html.LabelFor(x => x.BrockerId)
 			@SelectBrocker()
-			@Html.EditorWithLabelFor(model => model.FlightСost)
+			@Html.EditorWithLabelFor(model => model.FlightCost)
 		</div>
 		<div class="span4">
 			@Html.EditorWithLabelFor(model => model.DepartureAirport)
