--- a/Alicargo/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Views/ApplicationList/Index.cshtml
@@ -175,7 +175,7 @@
 
 
 			$.extend(settings, {
-				@if (!IdentityService.IsInRole(RoleType.Client) && !IdentityService.IsInRole(RoleType.Brocker))
+				@if (!IdentityService.IsInRole(RoleType.Client) && !IdentityService.IsInRole(RoleType.Broker))
 	{
 				@:editable: true,
 				}
