--- a/Alicargo/Views/Broker/EditorTemplates/BrokerAwbModel.cshtml
+++ b/Alicargo/Views/Broker/EditorTemplates/BrokerAwbModel.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Resources
-@model Alicargo.ViewModels.AirWaybill.BrockerAwbModel
+@model Alicargo.ViewModels.AirWaybill.BrokerAwbModel
 
 <div class="row">
 	<div class="span4">
