--- a/Alicargo/Views/DynamicScript/Urls.cshtml
+++ b/Alicargo/Views/DynamicScript/Urls.cshtml
@@ -8,7 +8,7 @@ $u.AirWaybill_List = "@Url.Action(MVC.AirWaybill.List())";
 $u.AirWaybill_Edit = "@Url.Action(MVC.AirWaybill.Edit())";
 $u.AirWaybill_Delete = "@Url.Action(MVC.AirWaybill.Delete())";
 $u.SenderAwb_Edit = "@Url.Action(MVC.SenderAwb.Edit())";
-$u.Brocker_AWB = "@Url.Action(MVC.Brocker.AWB())";
+$u.Broker_AWB = "@Url.Action(MVC.Broker.AWB())";
 
 return $u;
 }($a.Urls || {}));
