--- a/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
+++ b/Alicargo/Views/SenderAwb/EditorTemplates/SenderAwbModel.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Resources
 @inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.SenderAwbModel>
 
-@helper SelectBrocker()
+@helper SelectBroker()
 {
-	var name = Html.IdFor(x => x.BrockerId).ToHtmlString();
-	var action = MVC.Brocker.Select(name, Model == null ? (long?)null : Model.BrockerId);
+	var name = Html.IdFor(x => x.BrokerId).ToHtmlString();
+	var action = MVC.Broker.Select(name, Model == null ? (long?)null : Model.BrokerId);
 	@Html.Action(action)
 }
 
@@ -32,8 +32,8 @@
 	<div class="row">
 		<div class="span4">
 			@Html.EditorWithLabelFor(model => model.Bill)
-			@Html.LabelFor(x => x.BrockerId)
-			@SelectBrocker()
+			@Html.LabelFor(x => x.BrokerId)
+			@SelectBroker()
 			@Html.EditorWithLabelFor(model => model.FlightCost)
 		</div>
 		<div class="span4">
