--- a/Alicargo/Views/Client/Index.cshtml
+++ b/Alicargo/Views/Client/Index.cshtml
@@ -1,4 +1,10 @@
 ﻿@using Resources
+<style>
+	.container {
+		width: auto;
+		padding: 0 20px;
+	}
+</style>
 <p>
 	@Html.ActionLink(Pages.ClientAdd, MVC.Client.Create())
 </p>
