--- a/Alicargo/Views/User/Index.cshtml
+++ b/Alicargo/Views/User/Index.cshtml
@@ -1,7 +1,12 @@
 ﻿@using Alicargo.Contracts.Enums
 @using Resources
 @model RoleType
-
+<style>
+	.container {
+		width: auto;
+		padding: 0 20px;
+	}
+</style>
 <h3>
 	@switch (Model)
  {
@@ -27,10 +32,8 @@
 	 default:
 		 throw new ArgumentOutOfRangeException();
  }
+	@Html.ActionLink(Pages.Add, MVC.User.Create(Model), new { @class = "btn btn-link" })
 </h3>
-<p>
-	@Html.ActionLink(Pages.Add, MVC.User.Create(Model), new { @class = "btn btn-primary" })
-</p>
 <div id="user-grid" class="grid"></div>
 
 @section scripts
@@ -38,7 +41,7 @@
 	<script>
 		$(function () {
 			var error = function () { alert("@Pages.AnError"); };
-			
+
 			var dataSource = {
 				transport: {
 					read: {
