--- a/Alicargo/Views/DynamicScript/Urls.cshtml
+++ b/Alicargo/Views/DynamicScript/Urls.cshtml
@@ -7,8 +7,13 @@ $a.Urls = (function($u){
 $u.AirWaybill_List = "@Url.Action(MVC.AirWaybill.List())";
 $u.AirWaybill_Edit = "@Url.Action(MVC.AirWaybill.Edit())";
 $u.AirWaybill_Delete = "@Url.Action(MVC.AirWaybill.Delete())";
+
 $u.SenderAwb_Edit = "@Url.Action(MVC.SenderAwb.Edit())";
+
 $u.Broker_AWB = "@Url.Action(MVC.Broker.AWB())";
+
+$u.Client_List = "@Url.Action(MVC.Client.List())";
+$u.Client_Edit = "@Url.Action(MVC.Client.Edit())";
 
 return $u;
 }($a.Urls || {}));
